# conecta

./: .gitignore  DEVELOP.md  DEVELOPMENT.md  README.md  comparison.md  problems_with_connectorx.md
.github/: dependabot.yml
.github/workflows/: build_python.yml  docs.yml  package_release.yml  release.yml  release_python.yml  test_build.yml  test_core.yml  test_python.yml
conecta-benchmark/: benchmark.py  pyproject.toml
conecta-core/: Cargo.toml
conecta-core/src/: lib.rs  logger.rs  main.rs  metadata.rs  partition.rs  perf_logger.rs  schema.rs
conecta-core/src/destination/: arrow.rs  destination.rs  mod.rs
conecta-core/src/source/: mod.rs  postgres.rs  schema.rs  source.rs  sqlite.rs
conecta-docs/: .gitignore  README.md  architecture.excalidraw  docker-compose.yml  mkdocs.yml  pyproject.toml
conecta-docs/docs/: arrow_backends.md  connectorx.md  gen_ref_pages.py  index.md
conecta-docs/docs/databases/: postgres.md
conecta-docs/docs/how-to/: index.md  optimizing_further.md  polars.md  read_sql.md
conecta-docs/docs/reference/: architecture.md  connectorx.md  index.md
conecta-docs/docs/reference/databases/: postgres.md
conecta-python/: Cargo.toml  pyproject.toml
conecta-python/conecta/: __init__.py
conecta-python/conecta/ext/: __init__.py
conecta-python/conecta/tests/: conftest.py  test_bind.py  test_ext_polars.py  test_partition_plan.py  test_read_sql.py
conecta-python/conecta/tests/databases/: test_postgres.py
conecta-python/conecta/tests/test_data/: lineitem_ddl.sql  lineitem_small.sql  pg_datatypes_data.sql  pg_datatypes_ddl.sql  pg_datatypes_select.sql  pg_postgis_datatypes_data.sql  pg_postgis_datatypes_ddl.sql  pg_postgis_datatypes_select.sql
conecta-python/src/: lib.rs
docs/: README.md
docs/docs/: arrow_backends.md
docs/docs/databases/: postgres.md
