[package]
name = "conecta-core"
version = "0.0.1"
edition = "2021"

[dependencies]
peak_alloc = "0.3.0"
log = "0.4.27"

arrow = { version = "56.1.0", features = ["prettyprint", "ffi"] }

r2d2_postgres = "0.18.2"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
sqlparser = "0.58.0"
rayon = "1.11.0"
chrono = "0.4.41"

serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
flamegraph = "0.6.8"
