[package]
name = "conecta-core"
version = "0.0.1"
edition = "2021"

[dependencies]
peak_alloc = "0.3.0"
log = "0.4.28"

arrow = { version = "57.1.0", features = ["prettyprint", "ffi"] }

r2d2_postgres = "0.18.2"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-1", "with-geo-types-0_7"] }
sqlparser = "0.60.0"
rayon = "1.11.0"
chrono = "0.4.42"

serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.19.0"
geo-types = "0.7.18"
[dev-dependencies]
flamegraph = "0.6.10"
