[package]
name = "conecta-python"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "conecta"
crate-type = ["cdylib"]

[dependencies]
conecta-core = { path = "../conecta-core", default-features = false }
pyo3 = "0.25.1"
pyo3-arrow = "0.11.0"
serde_json = "1.0.143"
env_logger = "0.11.8"
log = "0.4.27"